--- a/my_wedding_planner/templates/profiles/delete_profile.html
+++ b/my_wedding_planner/templates/profiles/delete_profile.html
@@ -6,8 +6,8 @@
         {% csrf_token %}
         <br>
         <div class="buttons">
-            <button type="submit" class="btn btn-danger">Yes</button>
-            <a class="btn btn-info"  href="javascript:history.back()">No, go back</a>
+            <button type="submit" class="btn btn-outline-danger">Yes</button>
+            <a class="btn btn-outline-info"  href="javascript:history.back()">No, go back</a>
         </div>
     </form>
 {% endblock %}
