--- a/my_wedding_planner/templates/shared/partials/footer.html
+++ b/my_wedding_planner/templates/shared/partials/footer.html
@@ -1,9 +1,9 @@
-<footer id="footer-fixed">
+<footer id="footer-fixed-bottom">
     <div class="d-flex justify-content-center">
         <a href="https://twitter.com/"><i class="fab fa-twitter logo"></i></a>
         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f logo"></i></a>
         <a href="https://www.instagram.com/"><i class="fab fa-instagram logo"></i></a>
         <a href="mailto:cake_bar@yahoo.com"><i class="fas fa-envelope logo"></i></a>
     </div>
-    <p class="copyright">© SoftUni Python Web Framework 2021 Wedding Planner</p>
+    <p class="copyright">© My Wedding Planner 2021 SoftUni Python Web Framework</p>
 </footer>
