--- a/my_wedding_planner/templates/tasklist/task_delete.html
+++ b/my_wedding_planner/templates/tasklist/task_delete.html
@@ -13,7 +13,7 @@
                         </form>
                     </div>
                     <div class="m-2">
-                        <a class="btn btn-primary" href="javascript:history.back()">No, go back</a>
+                        <a class="btn btn-outline-info" href="javascript:history.back()">No, go back</a>
                     </div>
                 </div>
             </div>
