--- a/my_wedding_planner/templates/shared/partials/navigation.html
+++ b/my_wedding_planner/templates/shared/partials/navigation.html
@@ -1,54 +1,63 @@
 {% load static %}
-<nav>
+
+<nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="{% url 'index' %}" style="color: aqua">
-                <img src="{% static 'images/logo.png' %}" style="color: aqua"
-                     width="100" height="30"
-                     class="d-inline-block align-top" alt="">
-                Wedding Planner
-            </a>
-            <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                    style="color: aqua"
-            >
-                <span class="navbar-toggler-icon" style="color: aqua"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto text-dark">
-                    <li>
-                        <a class="nav-link" href="{% url 'index' %}" style="color: aqua">Home</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="{% url 'list tasks' %}" style="color: aqua">TaskList</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="{% url 'create task' %}" style="color: aqua">Add Task</a>
-                    </li>
-                    {% if request.user.is_authenticated %}
-                        <li>
-                            <a class="nav-link" href="{% url 'dashboard profile' %}"
-                               style="color: aqua">Hi, {{ request.user }}</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}" style="color: aqua">Log out</a>
-                        </li>
-                    {% else %}
-                        <li class="float-right">
-                            <a class="nav-link" href="{% url 'login' %}" style="color: aqua">Login</a>
-                        </li>
-                        <li class="float-right">
-                            <a class="nav-link" href="{% url 'register' %}" style="color: aqua">Register</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
+        <a class="navbar-brand" href="{% url 'index' %}" style="color: black">
+            <img src="{% static 'images/my-wedding-planner-logo.png' %}" style="color: black" width="100" height="60"
+                 class="d-inline-block align-top" alt="">
+        </a>
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                style="color: black"
+        >
+            <span class="navbar-toggler-icon" style="color: black"></span>
+        </button>
     </div>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav justify-content-end">
+            <li>
+                <a class="nav-link" href="{% url 'love stories' %}" style="color: black">Love Stories</a>
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'list tasks' %}" style="color: black">TaskList</a>
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'create task' %}" style="color: black">Add Task</a>
+            </li>
+            {% if request.user.is_authenticated %}
+                <li>
+                    <a class="nav-link" href="{% url 'dashboard profile' %}"
+                       style="color: black">Hello, {{ request.user }}</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="{% url 'logout' %}" style="color: black">Log out</a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{% url 'login' %}" class="btn btn-outline-info"
+                       style="color: black">Login
+                    </a>
+                </li>
+
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
+                <li>
+                    <a href="{% url 'register' %}" class="btn btn-outline-info"
+                       style="color: black">Register
+                    </a>
+                </li>
+
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            {% endif %}
+        </ul>
+    </div>
+
 </nav>
+
