--- a/my_wedding_planner/templates/accounts/password_reset.html
+++ b/my_wedding_planner/templates/accounts/password_reset.html
@@ -1,5 +1,7 @@
 {% extends 'shared/partials/base.html' %}
 
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 {% block content %}
     <div class="content-section">
         <form method="POST">
