--- a/my_wedding_planner/templates/profiles/delete_profile.html
+++ b/my_wedding_planner/templates/profiles/delete_profile.html
@@ -1,5 +1,7 @@
 {% extends 'shared/partials/base.html' %}
 
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 {% block content %}
     <h1>Are you sure you want to delete your profile?</h1>
     <form method="post">
@@ -7,7 +9,7 @@
         <br>
         <div class="buttons">
             <button type="submit" class="btn btn-outline-danger">Yes</button>
-            <a class="btn btn-outline-info"  href="javascript:history.back()">No, go back</a>
+            <a class="btn btn-outline-info" href="javascript:history.back()">No, go back</a>
         </div>
     </form>
 {% endblock %}
