--- a/my_wedding_planner/templates/shared/partials/footer.html
+++ b/my_wedding_planner/templates/shared/partials/footer.html
@@ -3,7 +3,7 @@
         <a href="https://twitter.com/"><i class="fab fa-twitter logo"></i></a>
         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f logo"></i></a>
         <a href="https://www.instagram.com/"><i class="fab fa-instagram logo"></i></a>
-        <a href="mailto:cake_bar@yahoo.com"><i class="fas fa-envelope logo"></i></a>
+        <a href="mailto:me_wedding_planner@gmail.com"><i class="fas fa-envelope logo"></i></a>
     </div>
     <p class="copyright">© My Wedding Planner 2021 SoftUni Python Web Framework</p>
 </footer>
