--- a/my_wedding_planner/templates/accounts/password_reset_complete.html
+++ b/my_wedding_planner/templates/accounts/password_reset_complete.html
@@ -1,5 +1,7 @@
 {% extends 'shared/partials/base.html' %}
 
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 {% block content %}
     <div class="alert alert-info">
         Your password has been set.
