--- a/my_wedding_planner/templates/accounts/register.html
+++ b/my_wedding_planner/templates/accounts/register.html
@@ -1,5 +1,7 @@
 {% extends 'shared/partials/base.html' %}
 
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 {% block content %}
     <div class="container-fluid" style="background-image: none">
         <div class="row">
