--- a/my_wedding_planner/templates/my_wedding_planner_app/index.html
+++ b/my_wedding_planner/templates/my_wedding_planner_app/index.html
@@ -1,14 +1,16 @@
 {% extends 'shared/partials/base.html' %}
 {% load static %}
 {% block content %}
-    <div class="container-fluid">
-        <div class="jumbotron parent">
-            <img style="width: 50%; height: 50%; text-align: center"
-                 src="{% static 'images/index.jpg' %}" alt="">
-            <div class="absolute">
-                <h1 class="display-4"><strong><em>An Expert Guide to Plan Your Perfect day</em></strong></h1>
-                <h1 class="display-3"><strong><em>Your Way...</em></strong></h1>
+    <div class="container-fluid" style="background-image: none">
+        <div class="center-block">
+{#            <div class="col-lg-3"></div>#}
+{#            <div class="col-lg-6">#}
+                <div class="jumbotron parent">
+                    <img style="width: 50%; height: 50%; text-align: center"
+                         src="{% static 'images/index.jpg' %}" alt="">
+                    <h2 class="display-4"><strong><em>An Expert Guide to Plan Your Perfect day</em></strong></h2>
+                    <h2 class="display-3"><strong><em>Your way...</em></strong></h2>
+                </div>
             </div>
         </div>
-    </div>
 {% endblock %}
