--- a/my_wedding_planner/templates/my_wedding_planner_app/love_stories_carousel.html
+++ b/my_wedding_planner/templates/my_wedding_planner_app/love_stories_carousel.html
@@ -2,53 +2,73 @@
 {% load static %}
 
 {% block content %}
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
-                    class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="{% static 'images/MONICA & DUSTIN.jpg' %}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>MONICA & DUSTIN</h5>
-                    <p>"From the beginning of our planning process, our planner was incredible! She made us feel heard,
-                        gave great suggestions and was always just an email or call away when we had any last minute
-                        questions. On the day of our wedding, she did a phenomenal of job making the venue look
-                        absolutely beautiful and captured the exact theme and feel that we were going for. I truly could
-                        not have made it through the day without her!"</p>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
+    <section id="testimonials">
+    <div class="container-fluid" style="background-image: none">
+        <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+            <ol class="carousel-indicators">
+                <li
+                        data-target="#testemonial-carousel"
+                        data-slide-to="0"
+                        class="active"
+                ></li>
+                <li data-target="#testemonial-carousel" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h5>
+                        MONICA & DUSTIN
+                    </h5>
+                    <img
+                            class="testimonials-image
+"
+                            src="{% static 'images/monica_dustin.jpg' %}"
+                            alt=""
+                    />
+                    <p><em><strong>From the beginning of our planning process, our planner was incredible!</strong></em>
+                    </p>
                 </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="{% static 'images/MELANIE & ERIC.jpg' %}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>MELANIE & ERIC</h5>
-                    <p>"Thank you so much for being a part of Eric and my special day. It was so nice working with you.
-                        Without your help the day would not have been as perfect as it was."</p>
+                <div class="carousel-item">
+                    <h5 class="testimonial-text">
+                        DYANA & JOSH
+                    </h5>
+                    <img
+                            class="testimonials-image"
+                            src="{% static 'images/dyana_josh.jpg' %}"
+                            alt="unicorn cake"
+                    />
+                    <p><em><strong>My Wedding planner was with us all day from beginning to end making sure all our
+                        wishes were met.</strong></em></p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/DYANA & JOSH.jpg' %}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>TDYANA & JOSH </h5>
-                    <p>"Our Bellagala wedding planner was with us all day from beginning to end making sure all our
-                        wishes were met. The day moved so fast and there was no way I could have kept my finger on
-                        everything and still enjoyed the day. Thank you!"</p>
-                </div>
+                <h2 class="testimonial-text">
+                    MELANIE & ERIC
+                </h2>
+                <img
+                        class="testimonials-image"
+                        src="{% static 'images/melanie_eric.jpg' %}"
+                        alt="unicorn cake"
+                />
+{#                <p><em><strong>Thank you so much for being a part of Eric and my special day.</strong></em></p>#}
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
+        <a
+                class="carousel-control-prev"
+                href="#testimonial-carousel"
+                role="button"
+                data-slide="prev"
+        >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
+            <span class="sr-only">Previous</span>
+        </a>
+        <a
+                class="carousel-control-next"
+                href="#testimonial-carousel"
+                role="button"
+                data-slide="next"
+        >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
