--- a/my_wedding_planner/templates/tasklist/task_edit.html
+++ b/my_wedding_planner/templates/tasklist/task_edit.html
@@ -1,5 +1,7 @@
 {% extends 'shared/partials/base.html' %}
 
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 {% block content %}
     <div class="container">
         <h1 class="text-center">Edit task</h1>
@@ -10,7 +12,7 @@
                       enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
-                    <button class="btn btn-primary mt-2" type="submit">Edit</button>
+                    <button class="btn btn-outline-info" type="submit">Edit</button>
                 </form>
             </div>
             <div class="col-lg-3"></div>
