--- a/my_wedding_planner/static/css/main.css
+++ b/my_wedding_planner/static/css/main.css
@@ -165,3 +165,33 @@ nav {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+body {
+  background-color: white;
+}
+
+.carousel-inner > .item {
+  height: 100vh;
+}
+
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  max-height: 800px;
+  width: auto;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+  background-image: none;
+}
+.carousel-caption {
+position: absolute;
+  top: 30%;
+
+
+}
