Modified templates files

--- a/my_wedding_planner/templates/my_wedding_planner_app/love_stories_carousel.html
+++ b/my_wedding_planner/templates/my_wedding_planner_app/love_stories_carousel.html
@@ -16,37 +16,35 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <h5>
+                        <h5><em><strong>
                             MONICA & DUSTIN
-                        </h5>
+                        </strong></em></h5>
                         <img
-                                class="testimonials-image
-"
+                                class="testimonials-image"
                                 src="{% static 'images/monica_dustin.jpg' %}"
-                                alt=""/>
-                        <p><em><strong>From the beginning of our planning process, our planner was incredible!</strong></em>
-                        </p>
+                                alt=""
+                        />
+                        <p><em><strong>From the beginning of our planning process, our planner was incredible!</strong></em></p>
                     </div>
                     <div class="carousel-item">
-                        <h5 class="testimonial-text">
+                        <h5><em><strong>
                             DYANA & JOSH
-                        </h5>
+                        </strong></em></h5>
                         <img
                                 class="testimonials-image"
                                 src="{% static 'images/dyana_josh.jpg' %}"
-                                alt="unicorn cake"
+                                alt=""
                         />
-                        <p><em><strong>My Wedding planner was with us all day from beginning to end making sure all our
-                            wishes were met.</strong></em></p>
+                        <p><em><strong>My Wedding planner was with us all day from beginning to end making sure all our  wishes were met.</strong></em></p>
                     </div>
                     <div class="carousel-item">
-                        <h5 class="testimonial-text">
+                        <h5><em><strong>
                             MELANIE & ERIC
-                        </h5>
+                        </strong></em></h5>
                         <img
                                 class="testimonials-image"
                                 src="{% static 'images/melanie_eric.jpg' %}"
-                                alt="unicorn cake"
+                                alt=""
                         />
                         <p><em><strong>Thank you so much for being a part of Eric and my special day.</strong></em></p>
                     </div>
@@ -69,48 +67,8 @@
                         <span class="visually-hidden">Next</span>
                     </a>
                 </div>
-
-                {#    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">#}
-                {#        <ol class="carousel-indicators">#}
-                {#            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>#}
-                {#            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>#}
-                {#            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>#}
-                {#        </ol>#}
-                {#        <div class="carousel-inner">#}
-                {#            <div class="carousel-item active">#}
-                {#                <img src="{% static 'images/monica_dustin.jpg' %}" alt="...">#}
-                {#                <div class="carousel-caption d-none d-sm-block">#}
-                {#                    <h5><strong>MONICA & DUSTIN</strong></h5>#}
-                {#                    <p><em><strong>From the beginning of our planning process, our planner was incredible!</strong></em>#}
-                {#                </p>#}
-                {#                </div>#}
-                {#            </div>#}
-                {#            <div class="carousel-item active">#}
-                {#                <img src="{% static 'images/dyana_josh.jpg' %}" alt="...">#}
-                {#                <div class="carousel-caption d-none d-sm-block">#}
-                {#                    <h5><strong>DYANA & JOSH</strong></h5>#}
-                {#                    <p><em><strong>My Wedding planner was with us all day from beginning to end making sure all#}
-                {#                        our wishes were met.</strong></em></p>#}
-                {#                </div>#}
-                {#            </div>#}
-                {#            <div class="carousel-item active">#}
-                {#                <img src="{% static 'images/melanie_eric.jpg' %}" alt="...">#}
-                {#                <div class="carousel-caption d-none d-sm-block">#}
-                {#                    <h5><strong>MELANIE & ERIC</strong></h5>#}
-                {#                    <p><em><strong>From the beginning of our planning process, our planner was incredible!</strong></em>#}
-                {#                    </p>#}
-                {#                </div>#}
-                {#            </div>#}
-                {#        </div>#}
-                {#        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">#}
-                {#            <span class="carousel-control-prev-icon" aria-hidden="true"></span>#}
-                {#            <span class="sr-only">Previous</span>#}
-                {#        </a>#}
-                {#        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">#}
-                {#            <span class="carousel-control-next-icon" aria-hidden="true"></span>#}
-                {#            <span class="sr-only">Next</span>#}
-                {#        </a>#}
-                {#    </div>#}
-
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
