--- a/my_wedding_planner/templates/profiles/dashboard_profiles.html
+++ b/my_wedding_planner/templates/profiles/dashboard_profiles.html
@@ -64,11 +64,12 @@
                     </div>
                 </div>
             {% else %}
-                <div class="col-md-2" role="group">
-                </div>
+                <div class="col-md-2" role="group"></div>
                 <div class="text-center">
                     <h2>You have no tasks</h2>
                     <a href="{% url 'create task' %}" class="btn btn-outline-success">Add Task</a>
                 </div>
             {% endif %}
+        </div>
+    </div>
 {% endblock %}
