--- a/my_wedding_planner/templates/shared/partials/base.html
+++ b/my_wedding_planner/templates/shared/partials/base.html
@@ -18,7 +18,7 @@
             rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="{% static 'images/icon.PNG' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/icon.PNG' %}"/>
 
     {# Font Awesome #}
 
@@ -41,7 +41,7 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
 
     <script src="{% static 'js/scripts.js' %}"></script>
