--- a/my_wedding_planner/templates/tasklist/task_create.html
+++ b/my_wedding_planner/templates/tasklist/task_create.html
@@ -11,8 +11,7 @@
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-7">
-                        <form method="post" class="furniture-form" action="{% url 'create task' %}"
-                              enctype="multipart/form-data">
+                        <form method="post" class="furniture-form" action="{% url 'create task' %}" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form }}
                             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -22,5 +21,7 @@
                     <div class="col-lg-3"></div>
                 </div>
             </div>
+        </div>
+    </div>
 
 {% endblock %}
