--- a/my_wedding_planner/templates/tasklist/task_edit.html
+++ b/my_wedding_planner/templates/tasklist/task_edit.html
@@ -8,8 +8,7 @@
         <div class="row">
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
-                <form method="post" class="furniture-form" action="{% url 'edit task' tasklist.pk %}"
-                      enctype="multipart/form-data">
+                <form method="post" class="furniture-form" action="{% url 'edit task' tasklist.pk %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
                     <button class="btn btn-outline-info" type="submit">Edit</button>
